--- a/assets/script.css
+++ b/assets/script.css
@@ -10,6 +10,13 @@
     flex-direction: column;
 }
 
-.btn-start {
-    
+.btn {
+    position: relative;
+    width: 75px;
+    left: 440px;
+    background-color: aqua;
+}
+
+.descro {
+    padding: 0px 200px;
 }
